[package]
name = "sauce-finder-rust"
version = "0.9.0"
authors = ["Rax Ixor <raxixor@rax.ee>"]
description = """It should be a Rust version of sauce-finder (located at https://gitlab.com/miicat/sauce-finder/)."""
edition = "2018"

[dependencies]
ureq = { version = "1.0", features = ["json"] }
# colored = "1.9"
dialoguer = "0.6"
smart-default = "0.6"
scraper = "0.12"
