[package]
name = "sauce-finder-rust"
version = "0.9.0"
authors = ["Rax Ixor <raxixor@rax.ee>"]
description = """It should be a Rust version of sauce-finder (located at https://gitlab.com/miicat/sauce-finder/)."""
edition = "2018"

[profile.release]
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

[dependencies]
ureq = "1.0"
dialoguer = "0.6"
smart-default = "0.6"
scraper = "0.12"
